<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:textAppearance="@style/TextAppearance.Step"
                android:textColor="@color/important"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/question3"
                android:textAppearance="@style/TextAppearance.Heading2"
                android:textColor="@color/heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_text" />

            <!-- Meal Question -->
            <TextView
                android:id="@+id/meal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/meals"
                android:textColor="@color/important"
                android:textAppearance="@style/TextAppearance.Step"
                app:layout_constraintBottom_toTopOf="@+id/name_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_text" />

            <EditText
                android:id="@+id/meal_input"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_rounded"
                android:elevation="4dp"
                android:gravity="center"
                android:hint="@string/meals_hint"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.BodyText2"
                android:textAlignment="center"
                android:textColorHint="@color/edit"
                android:textColor="@color/answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meal_label" />

            <!-- Hungry Label -->
            <TextView
                android:id="@+id/hungry_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hungry"
                android:textColor="@color/important"
                android:textAppearance="@style/TextAppearance.Step"
                app:layout_constraintTop_toBottomOf="@id/name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>

            <!-- Hour Input with Fixed 'hour' Inside -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hour"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_rounded"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hungry_label">

                <EditText
                    android:id="@+id/hungry_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/minute_hint"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.BodyText2"
                    android:textColor="@color/answer"
                    android:textColorHint="@color/edit"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="88dp" />

                <TextView
                    android:id="@+id/height_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/minute_unit"
                    android:textAppearance="@style/TextAppearance.SubHeading"
                    android:textColor="@color/gray2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Cook Question -->
            <TextView
                android:id="@+id/cook_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cook"
                android:textAppearance="@style/TextAppearance.Step"
                android:textColor="@color/important"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <!-- Yes / No Button -->
            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cook_label">

                <Button
                    android:id="@+id/yesBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/bg_rounded"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textAppearance="@style/TextAppearance.BodyText2"
                    android:textColor="@color/answer"/>

                <Button
                    android:id="@+id/noBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textAppearance="@style/TextAppearance.BodyText2"
                    android:textColor="@color/answer"/>
            </LinearLayout>

            <!-- Allergies Question -->
            <TextView
                android:id="@+id/allergies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/allergies"
                android:textAppearance="@style/TextAppearance.Step"
                android:textColor="@color/important"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <!-- Allergies Button -->
            <GridLayout
                android:id="@+id/allergies_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:layout_marginTop="16dp"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:useDefaultMargins="true"
                app:layout_constraintTop_toBottomOf="@id/allergies_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/allergy_egg"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_egg"/>
                <Button
                    android:id="@+id/allergy_milk"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_milk"/>
                <Button
                    android:id="@+id/allergy_buckwheat"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_buckwheat"/>
                <Button
                    android:id="@+id/allergy_peanut"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_peanut"/>
                <Button
                    android:id="@+id/allergy_soybean"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_soybean"/>
                <Button
                    android:id="@+id/allergy_wheat"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_wheat"/>
                <Button
                    android:id="@+id/allergy_pine_nut"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_pine_nut"/>
                <Button
                    android:id="@+id/allergy_walnut"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_walnut"/>
                <Button
                    android:id="@+id/allergy_crab"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_crab"/>
                <Button
                    android:id="@+id/allergy_shrimp"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_shrimp"/>
                <Button
                    android:id="@+id/allergy_squid"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_squid"/>
                <Button
                    android:id="@+id/allergy_mackerel"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_mackerel"/>
                <Button
                    android:id="@+id/allergy_shellfish"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_shellfish"/>
                <Button
                    android:id="@+id/allergy_peach"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_peach"/>
                <Button
                    android:id="@+id/allergy_tomato"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_tomato"/>
                <Button
                    android:id="@+id/allergy_chicken"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_chicken"/>
                <Button
                    android:id="@+id/allergy_pork"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_pork"/>
                <Button
                    android:id="@+id/allergy_beef"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_beef"/>
                <Button
                    android:id="@+id/allergy_sulfite"
                    style="@style/AllergyTag"
                    android:text="@string/allergy_sulfite"/>
            </GridLayout>

            <Button
                android:id="@+id/btn_go"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginVertical="40dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/light_gray"
                android:elevation="4dp"
                android:text="@string/go"
                android:textAppearance="@style/TextAppearance.SubHeading"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>